--- a/package.json
+++ b/package.json
@@ -4,11 +4,18 @@
   "version": "1.0.0",
   "main": "build/index.js",
   "dependencies": {
-    "@supabase/supabase-js": "^1.10.0"
+    "@supabase/supabase-js": "^1.10.0",
+    "express": "^4.17.1",
+    "helmet": "^4.4.1",
+    "nanoid": "^3.1.22"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@types/express": "^4.17.11",
+    "typescript": "^4.2.4"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc",
+    "run": "node build/index.js"
   },
   "repository": {
     "type": "git",
