--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
   "version": 2,
-  "builds": [{ "src": "app.js", "use": "@now/node" }],
-  "routes": [{ "src": "(.*)", "dest": "app.js" }]
+  "builds": [{ "src": "build/index.js", "use": "@now/node" }],
+  "routes": [{ "src": "(.*)", "dest": "build/index.js" }]
 }
