--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "build/index.js",
   "dependencies": {
     "@supabase/supabase-js": "^1.10.0",
+    "axios": "^0.21.1",
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "nanoid": "^3.1.22"
